# thesis_cart

./: .gitignore  README.md  brute_force.txt  heuristic.txt  metaheuristic.txt
archive/: diff_drive.launch.py  diff_drive_controller.py  rsp.launch.py
map/: draft1.pgm  draft1.yaml  eight.data  eightdraft.pgm  eleven.pgm  eleven.yaml  fifth.data  fifth.pgm  fifth.yaml  fifthdraft.pgm  first.data  firstdraft.data  fourth.data  fourth.pgm  fourth.yaml  fourthddraft.pgm  initial.pgm  initial.yaml  ninth.data  ninth.pgm  ninth.yaml  ninthdraft.data  ninthdraft.pgm  ninthdraft.yaml  processed.pgm  processed.yaml  seconddraft.data  seconddraft.yaml  seventh.pgm  sixthdraft.yaml  tenth.data  tenth.pgm  tenthdraft.pgm  tenthdraft.yaml  third.data  third.pgm  third.yaml  thirddraft.yaml  thirtheen.data  twelve.pgm  (+1 more)
map_draft/: eight.pgm  eight.yaml  first.pgm  first.yaml  fourteen.data  fourteen.pgm  fourteen.yaml  second.data  second.pgm  second.yaml  seventh.data  seventh.yaml  sixth.data  sixth.pgm  sixth.yaml  tenth.yaml  thirtheen.pgm  thirtheen.yaml  twelve.data
map_old/: draft1.yaml  eightdraft.data  eightdraft.yaml  fifthdraft.data  fifthdraft.yaml  firstdraft.pgm  firstdraft.yaml  fourthddraft.yaml  fourthdraft.data  seconddraft.pgm  seventhdraft.data  seventhdraft.pgm  seventhdraft.yaml  sixthdraft.pgm  thirddraft.data  thirddraft.pgm
rosbag/rosbag2_caitlin/: metadata.yaml
rosbag/rosbag2_test/: rosbag2_2026_04_06-15_12_10_0.db3
rosbag/rosbag2_test_10_ok_midway/: metadata.yaml
rosbag/rosbag2_test_2/: metadata.yaml
rosbag/rosbag2_test_3/: metadata.yaml
rosbag/rosbag2_test_4_straight/: metadata.yaml
rosbag/rosbag2_test_5/: metadata.yaml
rosbag/rosbag2_test_6_0.25m/: metadata.yaml
rosbag/rosbag2_test_8_good/: metadata.yaml
rosbag/rosbag2_test_9_ok/: metadata.yaml
rosbag2_2026_02_27-16_07_20/: rosbag2_2026_02_27-16_07_20_0.db3
rosbag2_2026_04_11-13_52_05/: metadata.yaml
rosbag2_test/: metadata.yaml
rosbag2_test_1/: metadata.yaml
rosbag2_test_7_good/: metadata.yaml
src/camera/: package.xml  setup.py
src/camera/camera/: webcam.py
src/chassis/: package.xml  setup.py
src/chassis/config/: mapper_params_online_async.yaml  my_controllers.yaml  nav2_astar.yaml  nav2_params.yaml  ros_gz_bridge.yaml  twist_mux.yaml
src/chassis/description/: chassis.urdf.xacro  chassis_core.xacro  gazebo_control.xacro  ros2_control.xacro
src/chassis/description_old/: chassis.urdf.xacro  chassis_core.xacro
src/chassis/description_sim/: chassis.urdf.xacro  chassis_core.xacro  ros2_control.xacro
src/chassis/launch/: launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_astar.py  navigation_launch.py  online_async_launch.py  rplidar.launch.py  rsp.launch.py
src/collision_avoidance/: CMakeLists.txt  package.xml
src/diffdrive_arduino/: CMakeLists.txt
src/diffdrive_arduino/include/diffdrive_arduino/: arduino_comms.hpp  diffbot_system.hpp  wheel.hpp
src/diffdrive_arduino/src/: diffbot_system.cpp
src/intercart_comms/: CMakeLists.txt  package.xml
src/intercart_comms/config/: comms_params.yaml
src/intercart_comms/include/intercart_comms/: cart_state.hpp  conflict_resolver.hpp  intercart_comms_node.hpp
src/intercart_comms/launch/: intercart_comms.launch.py
src/intercart_comms/src/: cart_state.cpp  conflict_resolver.cpp  intercart_comms_node.cpp
src/model/: package.xml  setup.py
src/path_planning/: package.xml  setup.py
src/price/: package.xml  setup.cfg  setup.py
src/simple_motion/: CMakeLists.txt  package.xml
(+42 files in other folders)
